--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,6 @@
 name: playwright-typescript-ts-jest-jest-assert
-'on':
-  push: null
+on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,11 +11,9 @@ jobs:
         with:
           node-version: 12.x
       - name: 'install:linux:dep'
-        run: >
+        run: |
           sudo apt-get update
-          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2
-          libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0
-          libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-dev libnotify4 libxslt1.1
+          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-dev libnotify4 libxslt1.1
           sudo apt-get install xvfb
       - name: 'npm:install'
         run: npm install
