--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,9 +13,7 @@ jobs:
       - name: 'install:linux:dep'
         run: >
           sudo apt-get update
-          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2
-          libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0
-          libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-dev libnotify4 libxslt1.1
+          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-dev libnotify4 libxslt1.1
           sudo apt-get install xvfb
       - name: 'npm:install'
         run: npm install
